--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,6 +2,9 @@ name: Build Android APK
 
 on:
   workflow_dispatch:  # Allows manual trigger
+  push:
+    branches:
+      - build-apk  # Triggers on push to build-apk branch
 
 jobs:
   build:
