--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,50 +1,42 @@
 name: Build Android APK
 
-on:
-  workflow_dispatch:  # Manual trigger
-  push:
-    branches:
-      - build-apk  # Push to this branch triggers the workflow
+on: workflow_dispatch:  # Allows manual trigger push: branches: - build-apk  # Triggers on push to build-apk branch
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+jobs: build: runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+steps:
+  - name: Checkout Repository
+    uses: actions/checkout@v3
 
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '17'
+  - name: Setup Java
+    uses: actions/setup-java@v3
+    with:
+      distribution: 'zulu'
+      java-version: '17'
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.x'
+  - name: Setup Flutter
+    uses: subosito/flutter-action@v2
+    with:
+      flutter-version: '3.x'
 
-      - name: Clean Flutter Cache
-        run: flutter pub cache repair
+  - name: Get Dependencies
+    run: flutter pub get
 
-      - name: Upgrade Dependencies
-        run: flutter pub upgrade --major-versions
+  - name: Generate Gradle Wrapper
+    run: cd android && gradle wrapper
 
-      - name: Get Dependencies
-        run: flutter pub get
+  - name: Grant Execute Permission for Gradle Wrapper
+    run: chmod +x android/gradlew
 
-      - name: Grant Execute Permission to Gradle
-        run: chmod +x android/gradlew
+  - name: Clean Project
+    run: cd android && ./gradlew clean
 
-      - name: Clean Gradle Cache
-        run: cd android && ./gradlew clean
+  - name: Build APK
+    run: flutter build apk --release
 
-      - name: Build APK
-        run: flutter build apk --release
+  - name: Upload APK
+    uses: actions/upload-artifact@v4
+    with:
+      name: android-apk
+      path: build/app/outputs/flutter-apk/app-release.apk
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
