--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,6 +1,6 @@
 name: Build Android APK
 
-on: workflow_dispatch:
+on: workflow_dispatch:  # Allows only manual trigger
 
 jobs: build: runs-on: ubuntu-latest
 
