--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -29,7 +29,7 @@ jobs:
         run: flutter pub get
 
       - name: Generate Gradle Wrapper
-        run: cd android && gradle wrapper
+        run: cd android && gradle wrapper --gradle-version 8.1
 
       - name: Grant Execute Permission for Gradle Wrapper
         run: chmod +x android/gradlew
