--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_html: ^3.0.0
   shared_preferences: ^2.2.2
   http: ^1.3.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
